# 25-1-medical-operation

./: CMakeLists.txt  README.md
include/: functions.h  point.h
src/: CMakeLists.txt  functions.cpp  main.cpp  point.cpp
